parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> sequence
Rule 2     block -> LBRAC sequence RBRAC
Rule 3     sequence -> declaration
Rule 4     sequence -> sequence declaration
Rule 5     declaration -> VARIABLE ID WORTH expression SEMICOLON
Rule 6     declaration -> VARIABLE ID SEMICOLON
Rule 7     declaration -> statement
Rule 8     statement -> expression SEMICOLON
Rule 9     statement -> DISPLAY expression SEMICOLON
Rule 10    statement -> if_statement
Rule 11    statement -> block
Rule 12    if_statement -> IF expression COLON statement
Rule 13    if_statement -> IF expression COLON statement ELSE statement
Rule 14    expression -> assignment
Rule 15    assignment -> logical_or
Rule 16    assignment -> ID WORTH assignment
Rule 17    logical_or -> logical_or OR logical_and
Rule 18    logical_or -> logical_and
Rule 19    logical_and -> logical_and AND equality
Rule 20    logical_and -> equality
Rule 21    equality -> equality EQUAL relational
Rule 22    equality -> equality NE relational
Rule 23    equality -> relational
Rule 24    relational -> relational LTE additive
Rule 25    relational -> relational GTE additive
Rule 26    relational -> relational LT additive
Rule 27    relational -> relational GT additive
Rule 28    relational -> additive
Rule 29    additive -> additive MINUS multiplicative
Rule 30    additive -> additive PLUS multiplicative
Rule 31    additive -> multiplicative
Rule 32    multiplicative -> multiplicative TIMES unary
Rule 33    multiplicative -> multiplicative DIVIDE unary
Rule 34    multiplicative -> unary
Rule 35    unary -> MINUS unary
Rule 36    unary -> NOT unary
Rule 37    unary -> primary
Rule 38    primary -> ID
Rule 39    primary -> NUMBER
Rule 40    primary -> BOOLEAN
Rule 41    primary -> LPAREN expression RPAREN
Rule 42    primary -> STRING

Terminals, with rules where they appear

AND                  : 19
BOOLEAN              : 40
COLON                : 12 13
DISPLAY              : 9
DIVIDE               : 33
ELSE                 : 13
EQUAL                : 21
GT                   : 27
GTE                  : 25
ID                   : 5 6 16 38
IF                   : 12 13
LBRAC                : 2
LPAREN               : 41
LT                   : 26
LTE                  : 24
MINUS                : 29 35
NE                   : 22
NOT                  : 36
NUMBER               : 39
OR                   : 17
PLUS                 : 30
RBRAC                : 2
RPAREN               : 41
SEMICOLON            : 5 6 8 9
STRING               : 42
TIMES                : 32
VARIABLE             : 5 6
WORTH                : 5 16
error                : 

Nonterminals, with rules where they appear

additive             : 24 25 26 27 28 29 30
assignment           : 14 16
block                : 11
declaration          : 3 4
equality             : 19 20 21 22
expression           : 5 8 9 12 13 41
if_statement         : 10
logical_and          : 17 18 19
logical_or           : 15 17
multiplicative       : 29 30 31 32 33
primary              : 37
program              : 0
relational           : 21 22 23 24 25 26 27
sequence             : 1 2 4
statement            : 7 12 13 13
unary                : 32 33 34 35 36

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . sequence
    (3) sequence -> . declaration
    (4) sequence -> . sequence declaration
    (5) declaration -> . VARIABLE ID WORTH expression SEMICOLON
    (6) declaration -> . VARIABLE ID SEMICOLON
    (7) declaration -> . statement
    (8) statement -> . expression SEMICOLON
    (9) statement -> . DISPLAY expression SEMICOLON
    (10) statement -> . if_statement
    (11) statement -> . block
    (14) expression -> . assignment
    (12) if_statement -> . IF expression COLON statement
    (13) if_statement -> . IF expression COLON statement ELSE statement
    (2) block -> . LBRAC sequence RBRAC
    (15) assignment -> . logical_or
    (16) assignment -> . ID WORTH assignment
    (17) logical_or -> . logical_or OR logical_and
    (18) logical_or -> . logical_and
    (19) logical_and -> . logical_and AND equality
    (20) logical_and -> . equality
    (21) equality -> . equality EQUAL relational
    (22) equality -> . equality NE relational
    (23) equality -> . relational
    (24) relational -> . relational LTE additive
    (25) relational -> . relational GTE additive
    (26) relational -> . relational LT additive
    (27) relational -> . relational GT additive
    (28) relational -> . additive
    (29) additive -> . additive MINUS multiplicative
    (30) additive -> . additive PLUS multiplicative
    (31) additive -> . multiplicative
    (32) multiplicative -> . multiplicative TIMES unary
    (33) multiplicative -> . multiplicative DIVIDE unary
    (34) multiplicative -> . unary
    (35) unary -> . MINUS unary
    (36) unary -> . NOT unary
    (37) unary -> . primary
    (38) primary -> . ID
    (39) primary -> . NUMBER
    (40) primary -> . BOOLEAN
    (41) primary -> . LPAREN expression RPAREN
    (42) primary -> . STRING

    VARIABLE        shift and go to state 4
    DISPLAY         shift and go to state 8
    IF              shift and go to state 12
    LBRAC           shift and go to state 13
    ID              shift and go to state 5
    MINUS           shift and go to state 19
    NOT             shift and go to state 22
    NUMBER          shift and go to state 24
    BOOLEAN         shift and go to state 25
    LPAREN          shift and go to state 26
    STRING          shift and go to state 27

    program                        shift and go to state 1
    sequence                       shift and go to state 2
    declaration                    shift and go to state 3
    expression                     shift and go to state 6
    statement                      shift and go to state 7
    if_statement                   shift and go to state 9
    block                          shift and go to state 10
    assignment                     shift and go to state 11
    logical_or                     shift and go to state 14
    logical_and                    shift and go to state 15
    equality                       shift and go to state 16
    relational                     shift and go to state 17
    additive                       shift and go to state 18
    multiplicative                 shift and go to state 20
    unary                          shift and go to state 21
    primary                        shift and go to state 23

state 1

    (0) S' -> program .



state 2

    (1) program -> sequence .
    (4) sequence -> sequence . declaration
    (5) declaration -> . VARIABLE ID WORTH expression SEMICOLON
    (6) declaration -> . VARIABLE ID SEMICOLON
    (7) declaration -> . statement
    (8) statement -> . expression SEMICOLON
    (9) statement -> . DISPLAY expression SEMICOLON
    (10) statement -> . if_statement
    (11) statement -> . block
    (14) expression -> . assignment
    (12) if_statement -> . IF expression COLON statement
    (13) if_statement -> . IF expression COLON statement ELSE statement
    (2) block -> . LBRAC sequence RBRAC
    (15) assignment -> . logical_or
    (16) assignment -> . ID WORTH assignment
    (17) logical_or -> . logical_or OR logical_and
    (18) logical_or -> . logical_and
    (19) logical_and -> . logical_and AND equality
    (20) logical_and -> . equality
    (21) equality -> . equality EQUAL relational
    (22) equality -> . equality NE relational
    (23) equality -> . relational
    (24) relational -> . relational LTE additive
    (25) relational -> . relational GTE additive
    (26) relational -> . relational LT additive
    (27) relational -> . relational GT additive
    (28) relational -> . additive
    (29) additive -> . additive MINUS multiplicative
    (30) additive -> . additive PLUS multiplicative
    (31) additive -> . multiplicative
    (32) multiplicative -> . multiplicative TIMES unary
    (33) multiplicative -> . multiplicative DIVIDE unary
    (34) multiplicative -> . unary
    (35) unary -> . MINUS unary
    (36) unary -> . NOT unary
    (37) unary -> . primary
    (38) primary -> . ID
    (39) primary -> . NUMBER
    (40) primary -> . BOOLEAN
    (41) primary -> . LPAREN expression RPAREN
    (42) primary -> . STRING

    $end            reduce using rule 1 (program -> sequence .)
    VARIABLE        shift and go to state 4
    DISPLAY         shift and go to state 8
    IF              shift and go to state 12
    LBRAC           shift and go to state 13
    ID              shift and go to state 5
    MINUS           shift and go to state 19
    NOT             shift and go to state 22
    NUMBER          shift and go to state 24
    BOOLEAN         shift and go to state 25
    LPAREN          shift and go to state 26
    STRING          shift and go to state 27

    declaration                    shift and go to state 28
    expression                     shift and go to state 6
    statement                      shift and go to state 7
    if_statement                   shift and go to state 9
    block                          shift and go to state 10
    assignment                     shift and go to state 11
    logical_or                     shift and go to state 14
    logical_and                    shift and go to state 15
    equality                       shift and go to state 16
    relational                     shift and go to state 17
    additive                       shift and go to state 18
    multiplicative                 shift and go to state 20
    unary                          shift and go to state 21
    primary                        shift and go to state 23

state 3

    (3) sequence -> declaration .

    VARIABLE        reduce using rule 3 (sequence -> declaration .)
    DISPLAY         reduce using rule 3 (sequence -> declaration .)
    IF              reduce using rule 3 (sequence -> declaration .)
    LBRAC           reduce using rule 3 (sequence -> declaration .)
    ID              reduce using rule 3 (sequence -> declaration .)
    MINUS           reduce using rule 3 (sequence -> declaration .)
    NOT             reduce using rule 3 (sequence -> declaration .)
    NUMBER          reduce using rule 3 (sequence -> declaration .)
    BOOLEAN         reduce using rule 3 (sequence -> declaration .)
    LPAREN          reduce using rule 3 (sequence -> declaration .)
    STRING          reduce using rule 3 (sequence -> declaration .)
    $end            reduce using rule 3 (sequence -> declaration .)
    RBRAC           reduce using rule 3 (sequence -> declaration .)


state 4

    (5) declaration -> VARIABLE . ID WORTH expression SEMICOLON
    (6) declaration -> VARIABLE . ID SEMICOLON

    ID              shift and go to state 29


state 5

    (16) assignment -> ID . WORTH assignment
    (38) primary -> ID .

    WORTH           shift and go to state 30
    TIMES           reduce using rule 38 (primary -> ID .)
    DIVIDE          reduce using rule 38 (primary -> ID .)
    MINUS           reduce using rule 38 (primary -> ID .)
    PLUS            reduce using rule 38 (primary -> ID .)
    LTE             reduce using rule 38 (primary -> ID .)
    GTE             reduce using rule 38 (primary -> ID .)
    LT              reduce using rule 38 (primary -> ID .)
    GT              reduce using rule 38 (primary -> ID .)
    EQUAL           reduce using rule 38 (primary -> ID .)
    NE              reduce using rule 38 (primary -> ID .)
    AND             reduce using rule 38 (primary -> ID .)
    OR              reduce using rule 38 (primary -> ID .)
    SEMICOLON       reduce using rule 38 (primary -> ID .)
    COLON           reduce using rule 38 (primary -> ID .)
    RPAREN          reduce using rule 38 (primary -> ID .)


state 6

    (8) statement -> expression . SEMICOLON

    SEMICOLON       shift and go to state 31


state 7

    (7) declaration -> statement .

    VARIABLE        reduce using rule 7 (declaration -> statement .)
    DISPLAY         reduce using rule 7 (declaration -> statement .)
    IF              reduce using rule 7 (declaration -> statement .)
    LBRAC           reduce using rule 7 (declaration -> statement .)
    ID              reduce using rule 7 (declaration -> statement .)
    MINUS           reduce using rule 7 (declaration -> statement .)
    NOT             reduce using rule 7 (declaration -> statement .)
    NUMBER          reduce using rule 7 (declaration -> statement .)
    BOOLEAN         reduce using rule 7 (declaration -> statement .)
    LPAREN          reduce using rule 7 (declaration -> statement .)
    STRING          reduce using rule 7 (declaration -> statement .)
    $end            reduce using rule 7 (declaration -> statement .)
    RBRAC           reduce using rule 7 (declaration -> statement .)


state 8

    (9) statement -> DISPLAY . expression SEMICOLON
    (14) expression -> . assignment
    (15) assignment -> . logical_or
    (16) assignment -> . ID WORTH assignment
    (17) logical_or -> . logical_or OR logical_and
    (18) logical_or -> . logical_and
    (19) logical_and -> . logical_and AND equality
    (20) logical_and -> . equality
    (21) equality -> . equality EQUAL relational
    (22) equality -> . equality NE relational
    (23) equality -> . relational
    (24) relational -> . relational LTE additive
    (25) relational -> . relational GTE additive
    (26) relational -> . relational LT additive
    (27) relational -> . relational GT additive
    (28) relational -> . additive
    (29) additive -> . additive MINUS multiplicative
    (30) additive -> . additive PLUS multiplicative
    (31) additive -> . multiplicative
    (32) multiplicative -> . multiplicative TIMES unary
    (33) multiplicative -> . multiplicative DIVIDE unary
    (34) multiplicative -> . unary
    (35) unary -> . MINUS unary
    (36) unary -> . NOT unary
    (37) unary -> . primary
    (38) primary -> . ID
    (39) primary -> . NUMBER
    (40) primary -> . BOOLEAN
    (41) primary -> . LPAREN expression RPAREN
    (42) primary -> . STRING

    ID              shift and go to state 5
    MINUS           shift and go to state 19
    NOT             shift and go to state 22
    NUMBER          shift and go to state 24
    BOOLEAN         shift and go to state 25
    LPAREN          shift and go to state 26
    STRING          shift and go to state 27

    expression                     shift and go to state 32
    assignment                     shift and go to state 11
    logical_or                     shift and go to state 14
    logical_and                    shift and go to state 15
    equality                       shift and go to state 16
    relational                     shift and go to state 17
    additive                       shift and go to state 18
    multiplicative                 shift and go to state 20
    unary                          shift and go to state 21
    primary                        shift and go to state 23

state 9

    (10) statement -> if_statement .

    VARIABLE        reduce using rule 10 (statement -> if_statement .)
    DISPLAY         reduce using rule 10 (statement -> if_statement .)
    IF              reduce using rule 10 (statement -> if_statement .)
    LBRAC           reduce using rule 10 (statement -> if_statement .)
    ID              reduce using rule 10 (statement -> if_statement .)
    MINUS           reduce using rule 10 (statement -> if_statement .)
    NOT             reduce using rule 10 (statement -> if_statement .)
    NUMBER          reduce using rule 10 (statement -> if_statement .)
    BOOLEAN         reduce using rule 10 (statement -> if_statement .)
    LPAREN          reduce using rule 10 (statement -> if_statement .)
    STRING          reduce using rule 10 (statement -> if_statement .)
    $end            reduce using rule 10 (statement -> if_statement .)
    RBRAC           reduce using rule 10 (statement -> if_statement .)
    ELSE            reduce using rule 10 (statement -> if_statement .)


state 10

    (11) statement -> block .

    VARIABLE        reduce using rule 11 (statement -> block .)
    DISPLAY         reduce using rule 11 (statement -> block .)
    IF              reduce using rule 11 (statement -> block .)
    LBRAC           reduce using rule 11 (statement -> block .)
    ID              reduce using rule 11 (statement -> block .)
    MINUS           reduce using rule 11 (statement -> block .)
    NOT             reduce using rule 11 (statement -> block .)
    NUMBER          reduce using rule 11 (statement -> block .)
    BOOLEAN         reduce using rule 11 (statement -> block .)
    LPAREN          reduce using rule 11 (statement -> block .)
    STRING          reduce using rule 11 (statement -> block .)
    $end            reduce using rule 11 (statement -> block .)
    RBRAC           reduce using rule 11 (statement -> block .)
    ELSE            reduce using rule 11 (statement -> block .)


state 11

    (14) expression -> assignment .

    SEMICOLON       reduce using rule 14 (expression -> assignment .)
    COLON           reduce using rule 14 (expression -> assignment .)
    RPAREN          reduce using rule 14 (expression -> assignment .)


state 12

    (12) if_statement -> IF . expression COLON statement
    (13) if_statement -> IF . expression COLON statement ELSE statement
    (14) expression -> . assignment
    (15) assignment -> . logical_or
    (16) assignment -> . ID WORTH assignment
    (17) logical_or -> . logical_or OR logical_and
    (18) logical_or -> . logical_and
    (19) logical_and -> . logical_and AND equality
    (20) logical_and -> . equality
    (21) equality -> . equality EQUAL relational
    (22) equality -> . equality NE relational
    (23) equality -> . relational
    (24) relational -> . relational LTE additive
    (25) relational -> . relational GTE additive
    (26) relational -> . relational LT additive
    (27) relational -> . relational GT additive
    (28) relational -> . additive
    (29) additive -> . additive MINUS multiplicative
    (30) additive -> . additive PLUS multiplicative
    (31) additive -> . multiplicative
    (32) multiplicative -> . multiplicative TIMES unary
    (33) multiplicative -> . multiplicative DIVIDE unary
    (34) multiplicative -> . unary
    (35) unary -> . MINUS unary
    (36) unary -> . NOT unary
    (37) unary -> . primary
    (38) primary -> . ID
    (39) primary -> . NUMBER
    (40) primary -> . BOOLEAN
    (41) primary -> . LPAREN expression RPAREN
    (42) primary -> . STRING

    ID              shift and go to state 5
    MINUS           shift and go to state 19
    NOT             shift and go to state 22
    NUMBER          shift and go to state 24
    BOOLEAN         shift and go to state 25
    LPAREN          shift and go to state 26
    STRING          shift and go to state 27

    expression                     shift and go to state 33
    assignment                     shift and go to state 11
    logical_or                     shift and go to state 14
    logical_and                    shift and go to state 15
    equality                       shift and go to state 16
    relational                     shift and go to state 17
    additive                       shift and go to state 18
    multiplicative                 shift and go to state 20
    unary                          shift and go to state 21
    primary                        shift and go to state 23

state 13

    (2) block -> LBRAC . sequence RBRAC
    (3) sequence -> . declaration
    (4) sequence -> . sequence declaration
    (5) declaration -> . VARIABLE ID WORTH expression SEMICOLON
    (6) declaration -> . VARIABLE ID SEMICOLON
    (7) declaration -> . statement
    (8) statement -> . expression SEMICOLON
    (9) statement -> . DISPLAY expression SEMICOLON
    (10) statement -> . if_statement
    (11) statement -> . block
    (14) expression -> . assignment
    (12) if_statement -> . IF expression COLON statement
    (13) if_statement -> . IF expression COLON statement ELSE statement
    (2) block -> . LBRAC sequence RBRAC
    (15) assignment -> . logical_or
    (16) assignment -> . ID WORTH assignment
    (17) logical_or -> . logical_or OR logical_and
    (18) logical_or -> . logical_and
    (19) logical_and -> . logical_and AND equality
    (20) logical_and -> . equality
    (21) equality -> . equality EQUAL relational
    (22) equality -> . equality NE relational
    (23) equality -> . relational
    (24) relational -> . relational LTE additive
    (25) relational -> . relational GTE additive
    (26) relational -> . relational LT additive
    (27) relational -> . relational GT additive
    (28) relational -> . additive
    (29) additive -> . additive MINUS multiplicative
    (30) additive -> . additive PLUS multiplicative
    (31) additive -> . multiplicative
    (32) multiplicative -> . multiplicative TIMES unary
    (33) multiplicative -> . multiplicative DIVIDE unary
    (34) multiplicative -> . unary
    (35) unary -> . MINUS unary
    (36) unary -> . NOT unary
    (37) unary -> . primary
    (38) primary -> . ID
    (39) primary -> . NUMBER
    (40) primary -> . BOOLEAN
    (41) primary -> . LPAREN expression RPAREN
    (42) primary -> . STRING

    VARIABLE        shift and go to state 4
    DISPLAY         shift and go to state 8
    IF              shift and go to state 12
    LBRAC           shift and go to state 13
    ID              shift and go to state 5
    MINUS           shift and go to state 19
    NOT             shift and go to state 22
    NUMBER          shift and go to state 24
    BOOLEAN         shift and go to state 25
    LPAREN          shift and go to state 26
    STRING          shift and go to state 27

    sequence                       shift and go to state 34
    declaration                    shift and go to state 3
    expression                     shift and go to state 6
    statement                      shift and go to state 7
    if_statement                   shift and go to state 9
    block                          shift and go to state 10
    assignment                     shift and go to state 11
    logical_or                     shift and go to state 14
    logical_and                    shift and go to state 15
    equality                       shift and go to state 16
    relational                     shift and go to state 17
    additive                       shift and go to state 18
    multiplicative                 shift and go to state 20
    unary                          shift and go to state 21
    primary                        shift and go to state 23

state 14

    (15) assignment -> logical_or .
    (17) logical_or -> logical_or . OR logical_and

    SEMICOLON       reduce using rule 15 (assignment -> logical_or .)
    COLON           reduce using rule 15 (assignment -> logical_or .)
    RPAREN          reduce using rule 15 (assignment -> logical_or .)
    OR              shift and go to state 35


state 15

    (18) logical_or -> logical_and .
    (19) logical_and -> logical_and . AND equality

    OR              reduce using rule 18 (logical_or -> logical_and .)
    SEMICOLON       reduce using rule 18 (logical_or -> logical_and .)
    COLON           reduce using rule 18 (logical_or -> logical_and .)
    RPAREN          reduce using rule 18 (logical_or -> logical_and .)
    AND             shift and go to state 36


state 16

    (20) logical_and -> equality .
    (21) equality -> equality . EQUAL relational
    (22) equality -> equality . NE relational

    AND             reduce using rule 20 (logical_and -> equality .)
    OR              reduce using rule 20 (logical_and -> equality .)
    SEMICOLON       reduce using rule 20 (logical_and -> equality .)
    COLON           reduce using rule 20 (logical_and -> equality .)
    RPAREN          reduce using rule 20 (logical_and -> equality .)
    EQUAL           shift and go to state 37
    NE              shift and go to state 38


state 17

    (23) equality -> relational .
    (24) relational -> relational . LTE additive
    (25) relational -> relational . GTE additive
    (26) relational -> relational . LT additive
    (27) relational -> relational . GT additive

    EQUAL           reduce using rule 23 (equality -> relational .)
    NE              reduce using rule 23 (equality -> relational .)
    AND             reduce using rule 23 (equality -> relational .)
    OR              reduce using rule 23 (equality -> relational .)
    SEMICOLON       reduce using rule 23 (equality -> relational .)
    COLON           reduce using rule 23 (equality -> relational .)
    RPAREN          reduce using rule 23 (equality -> relational .)
    LTE             shift and go to state 39
    GTE             shift and go to state 40
    LT              shift and go to state 41
    GT              shift and go to state 42


state 18

    (28) relational -> additive .
    (29) additive -> additive . MINUS multiplicative
    (30) additive -> additive . PLUS multiplicative

    LTE             reduce using rule 28 (relational -> additive .)
    GTE             reduce using rule 28 (relational -> additive .)
    LT              reduce using rule 28 (relational -> additive .)
    GT              reduce using rule 28 (relational -> additive .)
    EQUAL           reduce using rule 28 (relational -> additive .)
    NE              reduce using rule 28 (relational -> additive .)
    AND             reduce using rule 28 (relational -> additive .)
    OR              reduce using rule 28 (relational -> additive .)
    SEMICOLON       reduce using rule 28 (relational -> additive .)
    COLON           reduce using rule 28 (relational -> additive .)
    RPAREN          reduce using rule 28 (relational -> additive .)
    MINUS           shift and go to state 43
    PLUS            shift and go to state 44


state 19

    (35) unary -> MINUS . unary
    (35) unary -> . MINUS unary
    (36) unary -> . NOT unary
    (37) unary -> . primary
    (38) primary -> . ID
    (39) primary -> . NUMBER
    (40) primary -> . BOOLEAN
    (41) primary -> . LPAREN expression RPAREN
    (42) primary -> . STRING

    MINUS           shift and go to state 19
    NOT             shift and go to state 22
    ID              shift and go to state 46
    NUMBER          shift and go to state 24
    BOOLEAN         shift and go to state 25
    LPAREN          shift and go to state 26
    STRING          shift and go to state 27

    unary                          shift and go to state 45
    primary                        shift and go to state 23

state 20

    (31) additive -> multiplicative .
    (32) multiplicative -> multiplicative . TIMES unary
    (33) multiplicative -> multiplicative . DIVIDE unary

    MINUS           reduce using rule 31 (additive -> multiplicative .)
    PLUS            reduce using rule 31 (additive -> multiplicative .)
    LTE             reduce using rule 31 (additive -> multiplicative .)
    GTE             reduce using rule 31 (additive -> multiplicative .)
    LT              reduce using rule 31 (additive -> multiplicative .)
    GT              reduce using rule 31 (additive -> multiplicative .)
    EQUAL           reduce using rule 31 (additive -> multiplicative .)
    NE              reduce using rule 31 (additive -> multiplicative .)
    AND             reduce using rule 31 (additive -> multiplicative .)
    OR              reduce using rule 31 (additive -> multiplicative .)
    SEMICOLON       reduce using rule 31 (additive -> multiplicative .)
    COLON           reduce using rule 31 (additive -> multiplicative .)
    RPAREN          reduce using rule 31 (additive -> multiplicative .)
    TIMES           shift and go to state 47
    DIVIDE          shift and go to state 48


state 21

    (34) multiplicative -> unary .

    TIMES           reduce using rule 34 (multiplicative -> unary .)
    DIVIDE          reduce using rule 34 (multiplicative -> unary .)
    MINUS           reduce using rule 34 (multiplicative -> unary .)
    PLUS            reduce using rule 34 (multiplicative -> unary .)
    LTE             reduce using rule 34 (multiplicative -> unary .)
    GTE             reduce using rule 34 (multiplicative -> unary .)
    LT              reduce using rule 34 (multiplicative -> unary .)
    GT              reduce using rule 34 (multiplicative -> unary .)
    EQUAL           reduce using rule 34 (multiplicative -> unary .)
    NE              reduce using rule 34 (multiplicative -> unary .)
    AND             reduce using rule 34 (multiplicative -> unary .)
    OR              reduce using rule 34 (multiplicative -> unary .)
    SEMICOLON       reduce using rule 34 (multiplicative -> unary .)
    COLON           reduce using rule 34 (multiplicative -> unary .)
    RPAREN          reduce using rule 34 (multiplicative -> unary .)


state 22

    (36) unary -> NOT . unary
    (35) unary -> . MINUS unary
    (36) unary -> . NOT unary
    (37) unary -> . primary
    (38) primary -> . ID
    (39) primary -> . NUMBER
    (40) primary -> . BOOLEAN
    (41) primary -> . LPAREN expression RPAREN
    (42) primary -> . STRING

    MINUS           shift and go to state 19
    NOT             shift and go to state 22
    ID              shift and go to state 46
    NUMBER          shift and go to state 24
    BOOLEAN         shift and go to state 25
    LPAREN          shift and go to state 26
    STRING          shift and go to state 27

    unary                          shift and go to state 49
    primary                        shift and go to state 23

state 23

    (37) unary -> primary .

    TIMES           reduce using rule 37 (unary -> primary .)
    DIVIDE          reduce using rule 37 (unary -> primary .)
    MINUS           reduce using rule 37 (unary -> primary .)
    PLUS            reduce using rule 37 (unary -> primary .)
    LTE             reduce using rule 37 (unary -> primary .)
    GTE             reduce using rule 37 (unary -> primary .)
    LT              reduce using rule 37 (unary -> primary .)
    GT              reduce using rule 37 (unary -> primary .)
    EQUAL           reduce using rule 37 (unary -> primary .)
    NE              reduce using rule 37 (unary -> primary .)
    AND             reduce using rule 37 (unary -> primary .)
    OR              reduce using rule 37 (unary -> primary .)
    SEMICOLON       reduce using rule 37 (unary -> primary .)
    COLON           reduce using rule 37 (unary -> primary .)
    RPAREN          reduce using rule 37 (unary -> primary .)


state 24

    (39) primary -> NUMBER .

    TIMES           reduce using rule 39 (primary -> NUMBER .)
    DIVIDE          reduce using rule 39 (primary -> NUMBER .)
    MINUS           reduce using rule 39 (primary -> NUMBER .)
    PLUS            reduce using rule 39 (primary -> NUMBER .)
    LTE             reduce using rule 39 (primary -> NUMBER .)
    GTE             reduce using rule 39 (primary -> NUMBER .)
    LT              reduce using rule 39 (primary -> NUMBER .)
    GT              reduce using rule 39 (primary -> NUMBER .)
    EQUAL           reduce using rule 39 (primary -> NUMBER .)
    NE              reduce using rule 39 (primary -> NUMBER .)
    AND             reduce using rule 39 (primary -> NUMBER .)
    OR              reduce using rule 39 (primary -> NUMBER .)
    SEMICOLON       reduce using rule 39 (primary -> NUMBER .)
    COLON           reduce using rule 39 (primary -> NUMBER .)
    RPAREN          reduce using rule 39 (primary -> NUMBER .)


state 25

    (40) primary -> BOOLEAN .

    TIMES           reduce using rule 40 (primary -> BOOLEAN .)
    DIVIDE          reduce using rule 40 (primary -> BOOLEAN .)
    MINUS           reduce using rule 40 (primary -> BOOLEAN .)
    PLUS            reduce using rule 40 (primary -> BOOLEAN .)
    LTE             reduce using rule 40 (primary -> BOOLEAN .)
    GTE             reduce using rule 40 (primary -> BOOLEAN .)
    LT              reduce using rule 40 (primary -> BOOLEAN .)
    GT              reduce using rule 40 (primary -> BOOLEAN .)
    EQUAL           reduce using rule 40 (primary -> BOOLEAN .)
    NE              reduce using rule 40 (primary -> BOOLEAN .)
    AND             reduce using rule 40 (primary -> BOOLEAN .)
    OR              reduce using rule 40 (primary -> BOOLEAN .)
    SEMICOLON       reduce using rule 40 (primary -> BOOLEAN .)
    COLON           reduce using rule 40 (primary -> BOOLEAN .)
    RPAREN          reduce using rule 40 (primary -> BOOLEAN .)


state 26
